--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href=""><img src='{% static "img/logo-white.png" %}' alt="logo"
-                                                     class="logo logo-display">
+                                                     class="logo logo-display" width="110px" height="60px">
                     <img src="{% static 'img/logo.png' %}" class="logo logo-scrolled" alt="logo">
                 </a>
             </div>
