--- a/hlPY/statics/css/styleDenglu.css
+++ b/hlPY/statics/css/styleDenglu.css
@@ -9,34 +9,56 @@ i{
 }
 a{
     text-decoration: none;
+    color: #2EA7EB;
 }
 input{
     outline: none;
     border:none;
+    color: snow;
 
 
     
 }
+        input::-webkit-input-placeholder { /* WebKit browsers */
+            color: #f9f2f4;
+        }
+
+        input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+            color: red;
+        }
+
+        input::-moz-placeholder { /* Mozilla Firefox 19+ */
+        color: red;
+        }
+
+        input:-ms-input-placeholder { /* Internet Explorer 10+ */
+            color: red;
+        }
 /*设定html和body的宽度为100%*/
 html,body{
     width:100%; 
     font: 14px/150% tahoma,arial,Microsoft YaHei,Hiragino Sans GB,"\u5b8b\u4f53",sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #666;
+    background: url(../img/login.jpg) no-repeat;
+    background-size:100% 100%;
+    /*background-image: url(../img/login.jpg)!important;*/
 }
 /*头部*/
 .logo{
 	width: 160px;
     height:50px;
-    /*background: url(../img/icon.png) no-repeat;*/
+    background: url(../img/logo-white.png) no-repeat;
     position: absolute;
+    background-size:contain;
     top:20px;
     left:20px;
 }
+
 .desc{
 	font-size: 18px;
     line-height: 34px;
-    border-left: 1px solid #ccc;
+    border-left: 0px solid #ccc;
     position: absolute;
     left: 200px;
     top:28px;
@@ -46,26 +68,31 @@ html,body{
 header{
 	width:100%;
     height: 110px;
-    box-shadow: 10px 10px 10px rgba(111,111,111,.5);
+    /*box-shadow: 10px 10px 10px rgba(111,111,111,.5);*/
     position: relative;
 }
+
 /*注册信息*/
 /*总体布局*/
 form{
 	width: 400px;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 50px;
 }
 .register-box{
-	border: 1px solid #ddd;
+	border: #1d3e81 1px solid;
     margin-bottom: 32px;
+    background: #0f3e68;
+
 }
 .register-box label{
 	height: 52px;
     line-height: 52px;
     padding-left: 20px;
     display: inline-block;
+    color: snow;
 }
+
 .register-box input{
 	width: 190px;
     height: 19px;
@@ -73,7 +100,7 @@ form{
     padding-left: 20px;
     padding-top: 16px;
     font-size: 14px;
-    color: #666;
+    background: #0f3e68;
     font-family: "Microsoft YaHei","Hiragino Sans GB";
 }
 .register-box .tips{
@@ -95,10 +122,15 @@ form{
     display: inline-block;
     width: 77px;
     height: 52px;
-    border-right: 1px solid #ddd;
+    /*border-right: 1px solid #ddd;*/
 }
 .register-box .phone{
 	padding-left: 18px;
+}
+.register-box label select{
+    color: snow;
+    background: #0f3e68;
+    border: solid 0px;
 }
 /*验证码*/
 #code{
@@ -128,7 +160,7 @@ form{
 .submit_btn button{
 	width: 100%;
     height: 54px;
-    background-color:red;
+    background-color:#00aced;
     border: 0;
     font-size: 20px;
     color: white;
