--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -8,15 +8,21 @@
 </head>
 {#<script src="{% static "js/jquery-1.12.4.min.js"%}" type="text/javascript" charset="utf-8"></script>#}
 <script src="{% static 'js/jquery-2.2.3.js' %}"></script>
-	<script src="{% static "js/login.js"%}"></script>
-<body>
+<script src="{% static "js/login.js"%}"></script>
+<script src="{% static 'js/jsencrypt.min.js' %}"></script>
+<body   >
     <header>
-	<a href="#" class="logo"></a>
-	<div class="desc">登录</div>
+	<a href="{% url 'home' %}"  class="logo">
+
+    </a>
+
+
+
+{#	<div class="desc" >登录</div>#}
 </header>
-<form action=" " method="post">
+<form action=" " method="post" style=" padding: 20px 10px 20px 10px">
         {% csrf_token %}
-		<div class="register-box">
+		<div class="register-box"  >
 			<label >用 户 名
 			<input AutoComplete="Off" maxlength="20" type="text" name="username" placeholder="您的用户名和登录名">
 					</label>
@@ -25,7 +31,7 @@
 		</div>
 		<div class="register-box">
             <label >密   码
-			<input maxlength="20" type="password" name="password" placeholder="密码">
+			<input maxlength="20" type="password"  name="password" placeholder="密码">
 					</label>
             <div class="tips">
             </div>
