--- a/hlPY/statics/css/styleDenglu.css
+++ b/hlPY/statics/css/styleDenglu.css
@@ -41,7 +41,7 @@ html,body{
     -webkit-font-smoothing: antialiased;
     color: #666;
     background: url(../img/login.jpg) no-repeat;
-    background-size:100% 100%;
+    background-size:cover;
     /*background-image: url(../img/login.jpg)!important;*/
 }
 /*头部*/
