--- a/templates/ide.html
+++ b/templates/ide.html
@@ -97,15 +97,16 @@
                 } else if (re.test(code)) {
                     alert("亲你提交的代码中包含os或sys模块哦，请修改后提交~~~");
                 } else {
-                    post_time_interval = 0;
-                    {#------匹配用户打开文件的文件名#}
-                    var re_filename = /open\(([\'\"][^,]+\\+(\w+\.\w+)[\'\"])(,[\'\"]\w+[+]*[\'\"])*\)/;
-                    var filename = "'"+code.match(re_filename)[2]+"'";
-                    {#------为代码中的文件名增加用户名路径#}
-                    var newfilename = code.match(re_filename)[1];
-                    code=code.replace(newfilename, filename);
-                    alert(code);
-                    var postData = {'code': code};
+    post_time_interval = 0;
+    {#------匹配用户打开文件的文件名#}
+    var re_filename = /open\(([\'\"][^,]+\\+(\w+\.\w+)[\'\"])(,[\'\"]\w+[+]*[\'\"])*\)/;
+    if (re_filename.test(code)) {
+        var filename = "'" + code.match(re_filename)[2] + "'";
+        {#------为代码中的文件名增加用户名路径#}
+        var newfilename = code.match(re_filename)[1];
+        code = code.replace(newfilename, filename);
+    }
+    var postData = {'code': code};
                     $.ajax({
                         async: false,
                         cache: false,
